# hass-intesishome

./: .pre-commit-config.yaml  hacs.json  pyproject.toml
custom_components/intesisaccloud/: __init__.py  climate.py  config_flow.py  manager.py  manifest.json  strings.json  switch.py
custom_components/intesisaccloud/translations/: en.json
tests/: conftest.py  test_climate.py  test_manager.py  test_switch.py
