[project]
name = "hass-intesishome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant>=2024.12.5",
    "homeassistant-stubs>=2024.12.5",
    "pyintesishome==1.8.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
