[project]
name = "hass-intesishome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant>=2024.12.5",
    "homeassistant-stubs>=2024.12.5",
    "pyintesishome @ git+https://github.com/mikeysteele/pyIntesisHome.git@main",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.4",
    "ty>=0.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
